---
source: crates/tribute-passes/src/native/rc_insertion.rs
expression: output
---
core.module @test {
  clif.func {sym_name = @f, type = core.func(core.nil, core.ptr, core.ptr)} {
    ^bb0(%0: core.ptr, %1: core.ptr):
      %2 = tribute_rt.retain %0 : core.ptr
      %3 = tribute_rt.retain %0 : core.ptr
      %4 = clif.iconst {value = 16} : core.i64
      %5 = clif.call %4 {callee = @__tribute_alloc} : core.ptr
      clif.store %0, %5 {offset = 0}
      %6 = clif.iconst {value = 0} : core.i64
      clif.store %6, %5 {offset = 8}
      %7 = clif.iconst {value = 1} : core.i32
      %8 = clif.call %5, %7 {callee = @__tribute_yield_set_rc_roots} : core.nil
      %9 = clif.call %1 {callee = @__tribute_yield} : core.nil
      tribute_rt.release %0 {alloc_size = 0}
      %10 = clif.load %0 {offset = 0} : core.i32
      tribute_rt.release %0 {alloc_size = 0}
      clif.return %9
  }
}
